--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rampart One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Padauk">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Allison&display=swap" rel="stylesheet">
 
 
 
@@ -58,7 +61,7 @@
             </nav>
             <div class="hero-content">
                 <div class="info">
-                    <h1 class="animation">Hi I am Garry</h1>
+                    <h1>Hi I am Garry</h1>
                     <p>I love Coding Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem eveniet cum
                         voluptatibus ratione quibusdam magni repellat blanditiis adipisci nam tenetur voluptate
                     </p>
@@ -92,6 +95,83 @@
                     <div class="bootstrap"><i class="fab fa-bootstrap"></i>Bootstrap</div>
                 </div>
             </div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">
+                <h1>PROJECT</h1>
+            </div>
+
+            <div class="project-list">
+                <div class="project-1">
+                    <img src="img/calc.png" width="300px" height="300px" alt="calc image">
+                    <div class="information-1">
+                        <h1>Basic Prank Calculator</h1>
+                        <i class="fab fa-html5 fa-3x"></i>
+                        <i class="fab fa-css3-alt fa-3x"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro asperiores
+                            dignissimos
+                            temporibus quidem quos beatae cumque, corporis, eum non accusamus impedit dolorum excepturi
+                            earum.</p>
+                    </div>
+                </div>
+                <div class="project-2">
+                    <div class="information-2">
+                        <h1>Basic Prank Calculator</h1>
+                        <i class="fab fa-html5 fa-3x"></i>
+                        <i class="fab fa-css3-alt fa-3x"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro asperiores
+                            dignissimos
+                            temporibus quidem quos beatae cumque, corporis, eum non accusamus impedit dolorum excepturi
+                            earum.</p>
+                    </div>
+                    <img src="img/calc.png" width="300px" height="300px" alt="calc image">
+                </div>
+                <div class="project-3">
+                    <img src="img/calc.png" width="300px" height="300px" alt="calc image">
+                    <div class="information-3">
+                        <h1>Basic Prank Calculator</h1>
+                        <i class="fab fa-html5 fa-3x"></i>
+                        <i class="fab fa-css3-alt fa-3x"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo porro asperiores
+                            dignissimos
+                            temporibus quidem quos beatae cumque, corporis, eum non accusamus impedit dolorum excepturi
+                            earum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="about-me">
+            <div class="about-me-title">
+                <h1>ITs ALL ME</h1>
+            </div>
+
+            <div class="about-me-wrapper">
+                <div class="pic">
+                    <img class="garry" src="img/garry.jpeg" alt="garrys pic" width="250px" height="280px">
+                </div>
+
+                <div class="about-garry">
+                    <div class="first">
+                        <h2>About me</h2>
+                    </div>
+
+                    <div class="second">
+                        Garry Amasia - Full stack web developer
+                    </div>
+
+                    <div class="third">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sint dolor maiores
+                            vitae similique aperiam, quos voluptates, sapiente velit corporis fugit illo a. Ipsa
+                            deserunt ut ratione omnis. Cumque animi laboriosam suscipit? Perferendis pariatur ea illo
+                            expedita ad quas alias.
+                            <br>
+                            <p class="signature"> - Garry amasia - </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
 
